# Portpass

./: README.md  pyproject.toml
Test_UI/: Portpass.py  app_config.py  cryptoManager.py  initTable.py  setupMasterPass.py  setupScreen.py
sources/: app_config.py  connectDB.py  cryptoManager.py  dbManager.py  initTable.py  inituserDataTable.py  loginUser.py  main.py  passGen.py  portpassApp.py  setupMasterPass.py  test_main.py  userData.py
sources/data/: portpass.db
sources/data/key/: master.key  masterPass
sources/database/: portpass.db
test/: app_config.py  test_connectDB.py  test_cryptoManager.py  test_dbManager.py  test_initTable.py  test_main.py  test_passGen.py  test_ui_main.py  test_userData.py
test/data/: test_portpass.db  userData.csv
test/database/: test_portpass.db
