[tool.poetry]
name = "Portpass"
version = "0.1.0"
description = "Portpass is a simple GUI password manager, which use a local sqlite database."
authors = ["govine j"]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^37.0.2"
pandas = "^1.4.2"
Kivy = {extras = ["base"], version = "^2.1.0"}
Kivy-examples = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
